sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var inverse1:Boolean=true;
var inverse2:Boolean=true;
var T: Int=getNombreValeurs()
do
{ 
     for(i<-T-2 to 0 by -1)
       {       	
       	inverse1=false 
       	       	      		         	
    	        if(plusPetit(k+1,k))
	       {	   	 
	         echange(k+1,k)
	         inverse1=true
	    } }
	      
	 for(i<-0 to T-2)
	  {
	   inverse2=false
	      
	        if(plusPetit(k+1,k))
	         {	   	 
	          echange(k+1,k)
	          inverse2=true
	      }}
	  
}
while(inverse1==true || inverse2==true)
}

